--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Home Page{% endblock %}
 
 {% block body %}
 <style>
@@ -8,13 +8,9 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<div class="row">
-    <div class="example-wrapper">
     
-        {% block list %}{% endblock %}
-
+        {% block listing %}{% endblock %}
 
         {# {% block syncForm %}{% endblock %} #}
-    </div>
-</div>
+
 {% endblock %}
