--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,12 +10,13 @@
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
     <body>
-        <div class="container">
-        {% block body %}{% endblock %}
+        <div class="container-fluid">
+            <div class="row">
+            {% block body %}{% endblock %}
+            </div>
         </div>
     </body>
 </html>
