--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,14 +3,11 @@
 {% block title %}Home Page{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-    
+        <div class="row">
+        {% block vertivalMenu %}{% endblock %}
         {% block listing %}{% endblock %}
-
         {# {% block syncForm %}{% endblock %} #}
+        </div>
 
 {% endblock %}
