--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -4,3 +4,12 @@
     margin-top: 25px;
     margin-bottom: 20px;
 }
+
+#search-bar{
+
+    margin-bottom: 30px;
+}
+
+.search-btn{
+    padding-top: 32px;
+}
