--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -13,3 +13,20 @@
 .search-btn{
     padding-top: 32px;
 }
+
+#spinner-div {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: 2;
+}
+
+.block-spacer{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
