--- a/templates/home/pages/blocks/film.html.twig
+++ b/templates/home/pages/blocks/film.html.twig
@@ -20,6 +20,12 @@
     </div>
 </div> #}
 
+<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="#">Home</a></li>
+        <li class="gender-name breadcrumb-item active" aria-current="page">{{ genderName }}</li>
+    </ol>
+</nav>
 
 <div class="row row-cols-1 row-cols-md-3 g-4">
 {% for film in films %}
@@ -45,4 +51,20 @@
         <div class="list-group-item">No results found!</div>
 
     {% endfor %}
+
+    <div class="row block-spacer">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <div id="spinner-div" class="pt-5">
+        <div class="spinner-border text-primary" role="status"></div>
+    </div>
 </div>
